[package]
name = "libp2p-zeroconf"
edition = "2018"
version = "0.23.0"
description = "mDNS discovery based on the zeroconf crate using the system's bonjour/avahi daemon"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
async-std = { version = "1.7.0", optional = true }
libp2p-core = { version = "0.23.0", path = "../../core" }
libp2p-swarm = { version = "0.23.0", path = "../../swarm" }
log = "0.4"
tokio = { version = "0.2", default-features = false, features = ["udp"], optional = true }
void = "1.0"
wasm-timer = "0.2.4"
zeroconf = "0.6.2"
thiserror = "1.0.21"
smallvec = "1.4.2"
futures = "0.3.8"

